catching up a whole lot

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 *~
 *jpg
 Results/ERPs/ERP_Graphcs
-SEEG/SubjectFolders/
+sEEG/SubjectFolders/
 Rscripts/OldScripts*
 Rscripts/oldscripts*
 Resting_State/AfterWhole
