--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./docs_jekyll
-          destination: ./_site
+          destination: .docs_jekyll/_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
