--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: <br> Cortical SNR Development  
 description: <br>Project Information and Reproducibility Guide
-theme: jekyll-theme-minimal
+theme: jekyll-text-theme
