--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,7 @@ maybe-missing_AdditionalFunctionsfromEEGLAB/
 python/fooof/venv/
 sshkey
 sshkey.pub
-
+Aperiodic_MRS_Development/
+Cortical_SNR_Development/
+SpectralEvents/
+Entropy/
